force-app/main/default/objects/BundleSuggestion__c/BundleSuggestion__c.object-meta.xml
<CustomObject>
    <label>Bundle Suggestion</label>
    <nameField>
        <displayFormat>BS-{0000}</displayFormat>
        <label>Bundle Suggestion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bundle Suggestions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>