force-app/main/default/objects/BundleSuggestion__c/fields/AIReason__c.field-meta.xml
<CustomField>
    <fullName>AIReason__c</fullName>
    <label>AI Reasoning</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>