force-app/main/default/objects/BundleSuggestion__c/fields/OverstockedProduct__c.field-meta.xml
<CustomField>
    <fullName>OverstockedProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Overstocked Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Bundle Suggestions (Overstocked)</relationshipLabel>
    <relationshipName>Bundle_Suggestions_Overstocked</relationshipName>
    <type>Lookup</type>
</CustomField>