force-app/main/default/objects/BundleSuggestion__c/fields/PairedProduct__c.field-meta.xml
<CustomField>
    <fullName>PairedProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paired Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Bundle Suggestions (Paired)</relationshipLabel>
    <relationshipName>Bundle_Suggestions_Paired</relationshipName>
    <type>Lookup</type>
</CustomField>