force-app/main/default/objects/BundleSuggestion__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rule-Based</fullName>
                <default>true</default>
                <label>Rule-Based</label>
            </value>
            <value>
                <fullName>AI-Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>