force-app/main/default/objects/BundleSuggestion__c/fields/SuggestedDiscount__c.field-meta.xml
<CustomField>
    <fullName>SuggestedDiscount__c</fullName>
    <label>Suggested Discount</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>